--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
             <div class="icon-about">
               <svg class="icon-about-svg">
-                <use href="/images/svg/symbol-defs.svg#icon-strategy"></use>
+                <use href="./images/svg/symbol-defs.svg#icon-strategy"></use>
               </svg>
             </div>
 
@@ -98,7 +98,7 @@
           <li class="item-about">
             <div class="icon-about">
               <svg class="icon-about-svg">
-                <use href="/images/svg/symbol-defs.svg#icon-punctuality"></use>
+                <use href="./images/svg/symbol-defs.svg#icon-punctuality"></use>
               </svg>
             </div>
             <h3 class="title-about">Punctuality</h3>
@@ -110,7 +110,7 @@
           <li class="item-about">
             <div class="icon-about">
               <svg class="icon-about-svg">
-                <use href="/images/svg/symbol-defs.svg#icon-diligence"></use>
+                <use href="./images/svg/symbol-defs.svg#icon-diligence"></use>
               </svg>
             </div>
             <h3 class="title-about">Diligence</h3>
@@ -122,7 +122,7 @@
           <li class="item-about">
             <div class="icon-about">
               <svg class="icon-about-svg">
-                <use href="/images/svg/symbol-defs.svg#icon-technologies"></use>
+                <use href="./images/svg/symbol-defs.svg#icon-technologies"></use>
               </svg>
             </div>
             <h3 class="title-about">Technologies</h3>
@@ -184,7 +184,7 @@
                   <li class="social-team-item">
                     <a href="#" class="social-team-link link">
                       <svg class="social-team-svg" width="16" height="16">
-                        <use href="/images/svg/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -192,7 +192,7 @@
                   <li class="social-team-item">
                     <a href="#" class="social-team-link link">
                       <svg class="social-team-svg" width="16" height="16">
-                        <use href="/images/svg/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -200,7 +200,7 @@
                   <li class="social-team-item">
                     <a href="#" class="social-team-link link">
                       <svg class="social-team-svg" width="16" height="16" fill="#f4f4fd">
-                        <use href="/images/svg/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -208,7 +208,7 @@
                   <li class="social-team-item">
                     <a href="#" class="social-team-link link">
                       <svg class="social-team-svg" width="16" height="16">
-                        <use href="/images/svg/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -230,7 +230,7 @@
                   <li class="social-team-item">
                     <a href="#" class="social-team-link link">
                       <svg class="social-team-svg" width="16" height="16">
-                        <use href="/images/svg/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -238,7 +238,7 @@
                   <li class="social-team-item">
                     <a href="#" class="social-team-link link">
                       <svg class="social-team-svg" width="16" height="16">
-                        <use href="/images/svg/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -246,7 +246,7 @@
                   <li class="social-team-item">
                     <a href="#" class="social-team-link link">
                       <svg class="social-team-svg" width="16" height="16" fill="#f4f4fd">
-                        <use href="/images/svg/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -254,7 +254,7 @@
                   <li class="social-team-item">
                     <a href="#" class="social-team-link link">
                       <svg class="social-team-svg" width="16" height="16">
-                        <use href="/images/svg/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -276,7 +276,7 @@
                   <li class="social-team-item">
                     <a href="#" class="social-team-link link">
                       <svg class="social-team-svg" width="16" height="16">
-                        <use href="/images/svg/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -284,7 +284,7 @@
                   <li class="social-team-item">
                     <a href="#" class="social-team-link link">
                       <svg class="social-team-svg" width="16" height="16">
-                        <use href="/images/svg/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -292,7 +292,7 @@
                   <li class="social-team-item">
                     <a href="#" class="social-team-link link">
                       <svg class="social-team-svg" width="16" height="16" fill="#f4f4fd">
-                        <use href="/images/svg/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -300,7 +300,7 @@
                   <li class="social-team-item">
                     <a href="#" class="social-team-link link">
                       <svg class="social-team-svg" width="16" height="16">
-                        <use href="/images/svg/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -322,7 +322,7 @@
                   <li class="social-team-item">
                     <a href="#" class="social-team-link link">
                       <svg class="social-team-svg" width="16" height="16">
-                        <use href="/images/svg/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -330,7 +330,7 @@
                   <li class="social-team-item">
                     <a href="#" class="social-team-link link">
                       <svg class="social-team-svg" width="16" height="16">
-                        <use href="/images/svg/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -338,7 +338,7 @@
                   <li class="social-team-item">
                     <a href="#" class="social-team-link link">
                       <svg class="social-team-svg" width="16" height="16" fill="#f4f4fd">
-                        <use href="/images/svg/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -346,7 +346,7 @@
                   <li class="social-team-item">
                     <a href="#" class="social-team-link link">
                       <svg class="social-team-svg" width="16" height="16">
-                        <use href="/images/svg/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -437,7 +437,7 @@
             <li class="social-footer-item">
               <a href="#"  class="social-footer-link link">
                 <svg class="social-footer-svg" width="24" height="24">
-                  <use href="/images/svg/symbol-defs.svg#icon-instagram"></use>
+                  <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -445,7 +445,7 @@
             <li class="social-footer-item">
               <a href="#"  class="social-footer-link link">
                 <svg class="social-footer-svg" width="24" height="24">
-                  <use href="/images/svg/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -453,7 +453,7 @@
             <li class="social-footer-item">
               <a href="#"  class="social-footer-link link">
                 <svg class="social-footer-svg" width="24" height="24">
-                  <use href="/images/svg/symbol-defs.svg#icon-facebook"></use>
+                  <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -461,7 +461,7 @@
             <li class="social-footer-item">
               <a href="#"  class="social-footer-link link">
                 <svg class="social-footer-svg" width="24" height="24">
-                  <use href="/images/svg/symbol-defs.svg#icon-linkedin"></use>
+                  <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>      
