--- a/portfolio.html
+++ b/portfolio.html
@@ -228,7 +228,7 @@
             <li class="social-footer-item">
               <a href="#"  class="social-footer-link link">
                 <svg class="social-footer-svg" width="24" height="24">
-                  <use href="/images/svg/symbol-defs.svg#icon-instagram"></use>
+                  <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -236,7 +236,7 @@
             <li class="social-footer-item">
               <a href="#"  class="social-footer-link link">
                 <svg class="social-footer-svg" width="24" height="24">
-                  <use href="/images/svg/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -244,7 +244,7 @@
             <li class="social-footer-item">
               <a href="#"  class="social-footer-link link">
                 <svg class="social-footer-svg" width="24" height="24">
-                  <use href="/images/svg/symbol-defs.svg#icon-facebook"></use>
+                  <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -252,7 +252,7 @@
             <li class="social-footer-item">
               <a href="#"  class="social-footer-link link">
                 <svg class="social-footer-svg" width="24" height="24">
-                  <use href="/images/svg/symbol-defs.svg#icon-linkedin"></use>
+                  <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>      
