--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             <li class="customers-item">
               <a href="#" class="customers-link link">
                 <svg class="icon-customers-svg">
-                  <use href="/images/svg/symbol-defs.svg#icon-company-first"></use>
+                  <use href="./images/svg/symbol-defs.svg#icon-company-first"></use>
                 </svg>
               </a>
             </li>
@@ -375,7 +375,7 @@
             <li class="customers-item">
               <a href="#" class="customers-link link">
                 <svg class="icon-customers-svg">
-                  <use href="/images/svg/symbol-defs.svg#icon-company-second"></use>
+                  <use href="./images/svg/symbol-defs.svg#icon-company-second"></use>
                 </svg>
               </a>
             </li>
@@ -383,7 +383,7 @@
             <li class="customers-item">
               <a href="#" class="customers-link link">
                 <svg class="icon-customers-svg">
-                  <use href="/images/svg/symbol-defs.svg#icon-company-third"></use>
+                  <use href="./images/svg/symbol-defs.svg#icon-company-third"></use>
                 </svg>
               </a>
             </li>
@@ -391,7 +391,7 @@
             <li class="customers-item">
               <a href="#" class="customers-link link">
                 <svg class="icon-customers-svg">
-                  <use href="/images/svg/symbol-defs.svg#icon-company-fifth"></use>
+                  <use href="./images/svg/symbol-defs.svg#icon-company-fifth"></use>
                 </svg>
               </a>
             </li>
@@ -399,7 +399,7 @@
             <li class="customers-item">
               <a href="#" class="customers-link link">
                 <svg class="icon-customers-svg">
-                  <use href="/images/svg/symbol-defs.svg#icon-company-sixth"></use>
+                  <use href="./images/svg/symbol-defs.svg#icon-company-sixth"></use>
                 </svg>
               </a>
             </li>
@@ -407,7 +407,7 @@
             <li class="customers-item">
               <a href="#" class="customers-link link">
                 <svg class="icon-customers-svg">
-                  <use href="/images/svg/symbol-defs.svg#icon-company-seventh"></use>
+                  <use href="./images/svg/symbol-defs.svg#icon-company-seventh"></use>
                 </svg>
               </a>
             </li>
