--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 
             <li class="customers-item">
               <a href="#" class="customers-link link">
-                <svg class="icon-customers-svg">
+                <svg class="icon-customers-svg" width="16" height="16">
                   <use href="./images/svg/symbol-defs.svg#icon-company-first"></use>
                 </svg>
               </a>
@@ -374,7 +374,7 @@
 
             <li class="customers-item">
               <a href="#" class="customers-link link">
-                <svg class="icon-customers-svg">
+                <svg class="icon-customers-svg" width="16" height="16">
                   <use href="./images/svg/symbol-defs.svg#icon-company-second"></use>
                 </svg>
               </a>
@@ -382,7 +382,7 @@
 
             <li class="customers-item">
               <a href="#" class="customers-link link">
-                <svg class="icon-customers-svg">
+                <svg class="icon-customers-svg" width="16" height="16">
                   <use href="./images/svg/symbol-defs.svg#icon-company-third"></use>
                 </svg>
               </a>
@@ -390,7 +390,7 @@
 
             <li class="customers-item">
               <a href="#" class="customers-link link">
-                <svg class="icon-customers-svg">
+                <svg class="icon-customers-svg" width="16" height="16">
                   <use href="./images/svg/symbol-defs.svg#icon-company-fifth"></use>
                 </svg>
               </a>
@@ -398,7 +398,7 @@
 
             <li class="customers-item">
               <a href="#" class="customers-link link">
-                <svg class="icon-customers-svg">
+                <svg class="icon-customers-svg" width="16" height="16">
                   <use href="./images/svg/symbol-defs.svg#icon-company-sixth"></use>
                 </svg>
               </a>
