--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
             <li class="customers-item">
               <a href="#" class="customers-link link">
-                <svg class="icon-customers-svg" width="16" height="16">
+                <svg class="icon-customers-svg">
                   <use href="./images/svg/symbol-defs.svg#icon-company-sixth"></use>
                 </svg>
               </a>
@@ -420,7 +420,7 @@
     <!-- =========footer======== -->
     <footer class="footer">
       <div class="general-footer box">
-        <div class="logo-box box">
+        <div class="logo-box">
           <a class="logotype link" href="./index.html" target="_blank"
           ><span class="logo-color">web</span>studio</a>
           <p class="footer-text">
@@ -430,7 +430,7 @@
         </div>
   
         <div class="social-footer">
-          <p class="footer-social-title">Social media</p>
+          <h4 class="footer-social-title">Social media</h4>
   
           <ul class="social-footer-list list">
             
